--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
 
     <!-- build:css css/style.min.css -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/wtf-forms.css">
     <!-- endbuild -->
 
     <script src="js/libs/modernizr-2.7.1.min.js"></script>
 </head>
 <body>
-
+        
     <div id="app"></div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.11.0.min.js"><\/script>')</script>
 
-    <script src="http://fb.me/react-0.10.0.min.js"></script>
+    <script src="http://fb.me/react-0.10.0.js"></script>
     <script src="http://fb.me/JSXTransformer-0.10.0.js"></script>
 
     <!-- build:js js/app.min.js -->
