--- a/index.html
+++ b/index.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="en" itemscope="" itemtype="http://schema.org/LocalBusiness">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Happy Hacking!</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>QuoteApp by adWhite</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- build:css css/style.min.css -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/wtf-forms.css">
-    <!-- endbuild -->
+<!-- build:css css/style.min.css -->
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/wtf-forms.css">
+<link rel="stylesheet" href="css/animate.css">
+<!-- endbuild -->
 
-    <script src="js/libs/modernizr-2.7.1.min.js"></script>
+<script src="js/libs/modernizr-2.7.1.min.js"></script>
 </head>
 <body>
-        
-    <div id="app"></div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/libs/jquery-1.11.0.min.js"><\/script>')</script>
+<div id="app"></div>
 
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.12.0/jquery.validate.min.js"></script>
-    <script src="http://fb.me/react-0.10.0.js"></script>
-    <script src="http://fb.me/JSXTransformer-0.10.0.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/libs/jquery-1.11.0.min.js"><\/script>')</script>
 
-    <!-- build:js js/app.min.js -->
-    <!-- <script src="js/libs/underscore.js"></script> -->
-    <script src="js/libs/lodash.underscore.min.js"></script>
-    <script src="js/libs/backbone.js"></script>
-    <script src="js/libs/utils.js"></script>
-    <script src="js/options.js"></script>
-    <script src="js/models.js"></script>
-    <script src="js/views.js"></script>
-    <script src="js/routes.js"></script>
-    <script src="js/app.js"></script>
-    <!-- endbuild -->
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.12.0/jquery.validate.min.js"></script>
+<script src="http://fb.me/react-0.10.0.js"></script>
+<script src="http://fb.me/JSXTransformer-0.10.0.js"></script>
+
+<!-- build:js js/app.min.js -->
+<!-- <script src="js/libs/underscore.js"></script> -->
+<script src="js/libs/lodash.underscore.min.js"></script>
+<script src="js/libs/backbone.js"></script>
+<script src="js/libs/accounting.min.js"></script>
+<script src="js/libs/utils.js"></script>
+<script src="js/libs/jquery.velocity.min.js"></script>
+<script src="js/libs/velocity.ui.js"></script>
+<script src="js/options.js"></script>
+<script src="js/models.js"></script>
+<script src="js/views.js"></script>
+<script src="js/routes.js"></script>
+<script src="js/app.js"></script>
+<!-- endbuild -->
 </body>
 </html>
